--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
   <head>
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <link rel="stylesheet" href="../portfolio/social-icons.css"/>
+    <link rel="stylesheet" href="./assets/portfolio/social-icons.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com"/>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin"/>
     <link href="https://fonts.googleapis.com/css2?family=Aldrich&amp;family=Exo+2:ital,wght@0,400;0,700;1,400&amp;display=swap" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
-    <link rel="stylesheet" href="assets/portfolio/social-icons.css"/>
     <link rel="stylesheet" href="assets/css/style.css"/>
     <title>Worldsmith Web</title>
   </head>
@@ -33,6 +32,8 @@
         <div class="flex flex-column"><span style="justify-self:center;">Scott Casey | Kurohyou Studios</span><span style="justify-self:center;"></span></div><a class="material-icons" title="Email" href="mailto:scaseydv@gmail.com?subject=Inquiring about your work">email</a><a class="social-icon" href="https://github.com/Kurohyou">github</a><a class="social-icon" href="https://twitter.com/Kurohyoustudios">twitter</a>
       </div>
     </footer>
+    <script type="module" src="./assets/js/uuid.min.js"></script>
+    <script type="module">uuid = uuid.v1;</script>
     <script type="module" src="./assets/js/script.js"></script>
   </body>
 </html>
